@@ -37,10 +37,15 @@ override_dh_strip:
 override_dh_compress:
 	dh_compress -X.js -X_static/* -X _sources/* -X_sources/*/* -X.inv
 
+# We ignore failures on hurd, since its locking is broken
 override_dh_auto_test:
+ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
 	set -e; for python in $(shell pyversions -r); do \
-		$$python tests/test_all.py -q; \
+		$$python tests/test_all.py -q || [ "$(DEB_BUILD_ARCH_OS)" = "hurd" ]; \
 	done;
+else
+	@echo "** tests disabled"
+endif
 
 override_dh_python2:
 	dh_python2 -N python-apt-common
